# Vido

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_zh.md  deploy.sh
backend/: main.py  pyproject.toml
backend/app/: auth.py  config.py  cookies.py  database.py  main.py  models.py  stats.py  system.py  tasks.py  users.py  videos.py
backend/tests/: conftest.py  test_auth.py  test_cookies.py  test_database.py  test_stats.py  test_tasks.py  test_videos.py
frontend/: components.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  client.ts  cookies.ts  stats.ts  system.ts  tasks.ts  users.ts  videos.ts
frontend/src/components/: Layout.tsx  ProtectedRoute.tsx
frontend/src/hooks/: useAuth.tsx
frontend/src/i18n/: context.tsx  translations.ts
frontend/src/pages/: CookiesPage.tsx  DashboardPage.tsx  LoginPage.tsx  RegisterPage.tsx  SettingsPage.tsx  TasksPage.tsx  UsersPage.tsx  VideoPlayerPage.tsx  VideosPage.tsx
